--- a/.config/Dockerfile
+++ b/.config/Dockerfile
@@ -11,6 +11,9 @@ ENV GF_AUTH_BASIC_ENABLED "false"
 # Set development mode so plugins can be loaded without the need to sign
 ENV GF_DEFAULT_APP_MODE "development"
 
+ENV GF_DATE_FORMATS_DEFAULT_TIMEZONE "UTC+00:00"
+
 # Inject livereload script into grafana index.html
 USER root
 RUN sed -i 's/<\/body><\/html>/<script src=\"http:\/\/localhost:35729\/livereload.js\"><\/script><\/body><\/html>/g' /usr/share/grafana/public/views/index.html
+# EXPOSE 3000
